src/tests/snapshots/gitu__tests__log__log_grep_filter.snap
---
source: src/tests/log.rs
expression: ctx.redact_buffer()
---
▌_______ add this-should-be-at-the-top                                          |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 48d19316a51368e3
