src/tests/snapshots/gitu__tests__log__log_grep_prompt_valid.snap
---
source: src/tests/log.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is ahead of 'origin/main' by 2 commit.                             |
                                                                                |
 Recent commits                                                                 |
 _______ main add this-should-not-be-visible                                    |
 _______ add this-should-be-at-the-top                                          |
 _______ origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
? Search messages: ›                                                            |
────────────────────────────────────────────────────────────────────────────────|
Log                     Arguments                                               |
l Log current           -F Search messages (--grep)                             |
o Log other             -n Limit number of commits (-n=256)                     |
q/<esc> Quit/Close                                                              |
styles_hash: 16a36258644f9faa
