src/tests/snapshots/gitu__tests__log__log_local_branches_single_branch.snap
---
source: src/tests/log.rs
expression: ctx.redact_buffer()
---
▌*   378e3cc main Merge branch 'side'                            Author Name __ |
 |\                                                                             |
 * | 9295151 third commit                                        Author Name __ |
 | * 16c9409 second commit                                       Author Name __ |
 |/                                                                             |
 * 98de714 first commit                                          Author Name __ |
 * b66a0bf origin/main add initial-file                          Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 571144f480974880
