src/tests/snapshots/gitu__tests__log__log_n_limits_commit.snap
---
source: src/tests/log.rs
expression: ctx.redact_buffer()
---
▌_______ main add this-should-not-be-visible                                    |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 8e09fff3b0c10526
