src/tests/snapshots/gitu__tests__log__log_n_prompt_invalid.snap
---
source: src/tests/log.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is ahead of 'origin/main' by 2 commit.                             |
                                                                                |
 Recent commits                                                                 |
 _______ main add this-should-not-be-visible                                    |
 _______ add this-should-be-at-the-top                                          |
 _______ origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
Log                     Arguments                                               |
l Log current           -F Search messages (--grep)                             |
o Log other             -n Limit number of commits (-n)                         |
q/<esc> Quit/Close                                                              |
────────────────────────────────────────────────────────────────────────────────|
! Value must be a number greater than 0                                         |
styles_hash: 4973077ec637e391
