src/tests/snapshots/gitu__tests__log__log_other_input.snap
---
source: src/tests/log.rs
expression: ctx.redact_buffer()
---
▌* 6c08cf7 add second commit                                     Author Name __ |
 * 79e63f1 add third commit                                      Author Name __ |
 * b66a0bf origin/main add initial-file                          Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: fa4089546f6cd3a2
